--- a/.github/workflows/GradleBuild.yaml
+++ b/.github/workflows/GradleBuild.yaml
@@ -27,6 +27,7 @@ jobs:
 
 # Deploy to GCR
   build-push-gcr:
+   steps:
    - name: Build Docker image and Push to GCP
      env:
        IMAGE_NAME: app-image
