--- a/.github/workflows/GradleBuild.yaml
+++ b/.github/workflows/GradleBuild.yaml
@@ -32,7 +32,7 @@ jobs:
      env:
        IMAGE_NAME: app-image
        PROJECT_ID: github-cloudrun
-     steps: google-github-actions/setup-gcloud@master
+     uses: google-github-actions/setup-gcloud@master
      with:
        service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }} 
        project_id: ${{ env.PROJECT_ID }}
