5 priprema za GCP

--- a/.github/workflows/GradleBuild.yaml
+++ b/.github/workflows/GradleBuild.yaml
@@ -27,6 +27,7 @@ jobs:
 
 # Deploy to GCR
   build-push-gcr:
+   runs-on: ubuntu-latest
    steps:
    - name: Build Docker image and Push to GCP
      env:
