--- a/.github/workflows/GradleBuild.yaml
+++ b/.github/workflows/GradleBuild.yaml
@@ -40,7 +40,7 @@ jobs:
        export_default_credentials: true
 
    - name: Build Docker Image
-     run: docker build -t $IMAGE_NAME:latest .
+     run: docker build -t $IMAGE_NAME:1.0 .
 
    - name: Configure Docker Client
      run: |-
