--- a/.github/workflows/GradleBuild.yaml
+++ b/.github/workflows/GradleBuild.yaml
@@ -40,7 +40,9 @@ jobs:
        export_default_credentials: true
 
    - name: Build Docker Image
-     run: docker build -t $IMAGE_NAME:1.0 .
+     env:
+       GIT_TAG: v1.0
+     run: docker build -t $IMAGE_NAME:$GIT_TAG .
 
    - name: Configure Docker Client
      run: |-
