--- a/.github/workflows/GradleBuild.yaml
+++ b/.github/workflows/GradleBuild.yaml
@@ -40,9 +40,7 @@ jobs:
        export_default_credentials: true
 
    - name: Build Docker Image
-     env:
-       GIT_TAG: v1.0
-     run: docker build -t $IMAGE_NAME:$GIT_TAG .
+     run: docker build -t $IMAGE_NAME .
 
    - name: Configure Docker Client
      run: |-
@@ -52,8 +50,8 @@ jobs:
      env:
        GIT_TAG: v0.1.0
      run: |-
-       docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
-       docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
+       docker tag $IMAGE_NAME gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
+       docker tag $IMAGE_NAME gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
        docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
        docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
   
