--- a/.github/workflows/GradleBuild.yaml
+++ b/.github/workflows/GradleBuild.yaml
@@ -40,7 +40,9 @@ jobs:
        export_default_credentials: true
 
    - name: Build Docker Image
-     run: docker build . -t $IMAGE_NAME 
+     env:
+       IMAGE_NAME: app-image
+     run: docker build -t $IMAGE_NAME . 
 
    - name: Configure Docker Client
      run: |-
