--- a/.github/workflows/GradleBuild.yaml
+++ b/.github/workflows/GradleBuild.yaml
@@ -29,6 +29,8 @@ jobs:
   build-push-gcr:
    runs-on: ubuntu-latest
    steps:
+   - name: Checkout project sources
+     uses: actions/checkout@v2
    - name: Build Docker image and Push to GCP
      env:
        IMAGE_NAME: app-image
