--- a/.github/workflows/GradleBuild.yaml
+++ b/.github/workflows/GradleBuild.yaml
@@ -44,7 +44,7 @@ jobs:
    - name: Build Docker Image
      env:
        IMAGE_NAME: app-image
-     run: docker build -t $IMAGE_NAME . 
+     run: docker build -t $IMAGE_NAME:latest . 
 
    - name: Configure Docker Client
      run: |-
@@ -54,8 +54,8 @@ jobs:
      env:
        GIT_TAG: v0.1.0
      run: |-
-       docker tag $IMAGE_NAME gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
-       docker tag $IMAGE_NAME gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
+       docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
+       docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
        docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
        docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
   
