--- a/.github/workflows/GradleBuild.yaml
+++ b/.github/workflows/GradleBuild.yaml
@@ -44,6 +44,7 @@ jobs:
    - name: Build Docker Image
      env:
        IMAGE_NAME: app-image
+       GIT_TAG1: v1.0
      run: docker build -t $IMAGE_NAME:latest . 
 
    - name: Configure Docker Client
@@ -52,10 +53,10 @@ jobs:
 
    - name: Push Docker Image to Container Registry (GCR)
      env:
-       GIT_TAG: v0.1.0
+       GIT_TAG2: v0.1.0
      run: |-
-       docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
-       docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
-       docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
-       docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
+       docker tag $IMAGE_NAME:$GIT_TAG1 gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
+ #      docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG2
+ #      docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
+       docker push gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG2
   
