18 priprema za GCP

--- a/.github/workflows/GradleBuild.yaml
+++ b/.github/workflows/GradleBuild.yaml
@@ -48,7 +48,8 @@ jobs:
      run: docker build -t $IMAGE_NAME:latest . 
 
    - name: Configure Docker Client
-     run: gcloud auth configure-docker --quiet
+     run: |- 
+      gcloud auth configure-docker --quiet
 
    - name: Push Docker Image to Container Registry (GCR)
      env:
