--- a/.github/workflows/GradleBuild.yaml
+++ b/.github/workflows/GradleBuild.yaml
@@ -51,7 +51,7 @@ jobs:
      run: |- 
       gcloud auth configure-docker --quiet
 
-   - name: Push Docker Image to Container Registry (GCR)
+   - name: Push Docker Image to GCR
      env:
        GIT_TAG2: v0.1.0
      run: |-
